[gd_scene load_steps=15 format=2]

[ext_resource path="res://slides/3levelLoose.png" type="Texture" id=1]
[ext_resource path="res://HUD_game.tscn" type="PackedScene" id=2]
[ext_resource path="res://SNave.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level3.gd" type="Script" id=4]
[ext_resource path="res://Juego/backgrounds/neuronas.jpg" type="Texture" id=5]
[ext_resource path="res://slides/3levelWin.png" type="Texture" id=6]
[ext_resource path="res://antibody.tscn" type="PackedScene" id=7]
[ext_resource path="res://Bacteria.tscn" type="PackedScene" id=8]
[ext_resource path="res://slides/3levelStart.png" type="Texture" id=9]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Bala_plus.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sound/level_sound.ogg" type="AudioStream" id=12]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.555359, 0.113968, 0, 0, 0, 0, 502.144, 1.28033, 0, 0, 0, 0, 500.977, 797.901, 0, 0, 0, 0, -1.72168, 799.067, 0, 0, 0, 0, -0.555359, 4.77939, 0, 0, 0, 0, -0.555359, 0.113968 )
}

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 10 )

[node name="Level3" type="Node"]
script = ExtResource( 4 )
Bacteria = ExtResource( 8 )
Antibody = ExtResource( 7 )
Bala_plus = ExtResource( 11 )
cantAntbodyMax = 20
cantBactMax = 20
cantBalasMax = 10

[node name="background" type="TextureRect" parent="."]
margin_left = -175.419
margin_top = -6.57527
margin_right = 676.581
margin_bottom = 633.425
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BacteriaTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="ScoreTimer" type="Timer" parent="."]

[node name="InicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="InitialPosition" type="Position2D" parent="."]
position = Vector2( 260.097, 396.561 )

[node name="Camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="BacteriaPosicion" type="PathFollow2D" parent="Camino"]
position = Vector2( -0.555359, 0.113968 )
rotation = 0.00232019

[node name="Nave" parent="." instance=ExtResource( 3 )]

[node name="NextScene" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Change_bacteria" type="Timer" parent="."]

[node name="antibody2D" parent="." instance=ExtResource( 7 )]
position = Vector2( 273.793, 296.652 )

[node name="AntibodyTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="HUD_game" parent="." instance=ExtResource( 2 )]

[node name="TimerStart" type="Timer" parent="."]
wait_time = 4.5
one_shot = true

[node name="LevelWin" type="TextureRect" parent="."]
visible = false
margin_left = -1.52
margin_top = -95.845
margin_right = 1078.48
margin_bottom = 1824.16
rect_scale = Vector2( 0.47, 0.47 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLoose" type="TextureRect" parent="."]
visible = false
margin_left = -0.353618
margin_top = -95.845
margin_right = 1079.65
margin_bottom = 1824.16
rect_scale = Vector2( 0.47, 0.47 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureRect" parent="."]
visible = false
margin_left = -22.5626
margin_top = -97.4704
margin_right = 1057.44
margin_bottom = 1822.53
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Again" type="ColorPickerButton" parent="."]
visible = false
margin_left = 118.0
margin_top = 686.0
margin_right = 377.0
margin_bottom = 738.0
disabled = true
color = Color( 0.905882, 0.870588, 0.713726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contenido" type="Label" parent="Again"]
margin_right = 162.0
margin_bottom = 33.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Reintentar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerBalaPlus" type="Timer" parent="."]
wait_time = 5.0

[node name="sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -17.444
[connection signal="hide_HUD" from="." to="HUD_game" method="hide_HUD"]
[connection signal="start_HUD3" from="." to="HUD_game" method="_on_Level3_start_HUD3"]
[connection signal="timeout" from="BacteriaTimer" to="." method="_on_BacteriaTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_InicioTimer_timeout"]
[connection signal="bala_plus" from="Nave" to="." method="_on_Nave_bala_plus"]
[connection signal="catch" from="Nave" to="." method="_on_Nave_catch"]
[connection signal="golpe" from="Nave" to="." method="game_over"]
[connection signal="killed" from="Nave" to="." method="_on_Nave_add_kill"]
[connection signal="shot" from="Nave" to="." method="_on_Nave_shot"]
[connection signal="timeout" from="NextScene" to="." method="_on_NextScene_timeout"]
[connection signal="timeout" from="AntibodyTimer" to="." method="_on_AntibodyTimer_timeout"]
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
[connection signal="pressed" from="Again" to="." method="play_again"]
[connection signal="timeout" from="TimerBalaPlus" to="." method="_on_TimerBalaPlus_timeout"]
